@@ -38,6 +38,34 @@ when /kfreebsd/
 when /bsd|dragonfly/
   libc_so = "/usr/lib/libc.so"
   libm_so = "/usr/lib/libm.so"
+when /aix/
+  pwd=Dir.pwd
+  libc_so = libm_so = "#{pwd}/libaixdltest.so"
+  unless File.exist? libc_so
+    cobjs=%w!strcpy.o!
+    mobjs=%w!floats.o sin.o!
+    funcs=%w!sin sinf strcpy strncpy!
+    expfile='dltest.exp'
+    require 'tmpdir'
+    Dir.mktmpdir do |dir|
+      begin
+        Dir.chdir dir
+        %x!/usr/bin/ar x /usr/lib/libc.a #{cobjs.join(' ')}!
+        %x!/usr/bin/ar x /usr/lib/libm.a #{mobjs.join(' ')}!
+        %x!echo "#{funcs.join("\n")}\n" > #{expfile}!
+        require 'rbconfig'
+        if RbConfig::CONFIG["GCC"] = 'yes'
+          lflag='-Wl,'
+        else
+          lflag=''
+        end
+        flags="#{lflag}-bE:#{expfile} #{lflag}-bnoentry -lm"
+        %x!#{RbConfig::CONFIG["LDSHARED"]} -o #{libc_so} #{(cobjs+mobjs).join(' ')} #{flags}!
+      ensure
+        Dir.chdir pwd
+      end
+    end
+  end
 else
   libc_so = ARGV[0] if ARGV[0] && ARGV[0][0] == ?/
   libm_so = ARGV[1] if ARGV[1] && ARGV[1][0] == ?/
