@@ -1,3 +1,9 @@
+Thu Aug 26 10:38:11 2010  Yutaka Kanemoto  <kanemoto@ruby-lang.org>
+
+	* test/dl/test_base.rb: AIX does not have dynamically loadable lib[cm].
+
+	* test/fiddle/helper.rb: AIX does not have dynamically loadable lib[cm].
+
 Wed Aug 25 03:42:43 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/dl/cfunc.c (rb_dlcfunc_call): workaround for VC9 for x64.
